# crew_sinais

./: .gitignore  README.md  pyproject.toml
src/crew_sinais/: crew.py  main.py
src/crew_sinais/config/: agents.yaml  tasks.yaml
