[tool.poetry]
name = "crew_sinais"
version = "0.1.0"
description = "crew_sinais using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }

[tool.poetry.scripts]
crew_sinais = "crew_sinais.main:run"
train = "crew_sinais.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
